add_executable(
        archiver
        archiver.cpp
        bit_istream.h
        bit_ostream.h
        utilities.cpp
        utilities.h
        heap.h
        binary_trie.cpp
        binary_trie.h
        archive.cpp
        archive.h
        dearchive.cpp
        dearchive.h
        custom_byte.cpp
        custom_byte.h
)
